# tsp-http-client

./: Cargo.toml  README.md  create-release.sh  update-readme.sh
.forgejo/workflows/: build-and-tests.yaml
.github/workflows/: build-and-tests.yaml
scripts/: build-release.sh  create-release.sh  update-readme.sh
tsp-http-client/: CHANGELOG.md  Cargo.toml  README.md
tsp-http-client-cmd/: Cargo.toml
tsp-http-client-cmd/src/: main.rs
tsp-http-client-cmd/tests/: cli.rs
tsp-http-client/certs/: tsa-sectico.pem
tsp-http-client/src/: lib.rs  tsp.rs
tsp_http_client/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
tsp_http_client/src/: lib.rs
tsp_http_client_cmd/: Cargo.toml
tsp_http_client_cmd/src/: main.rs
