[workspace]
resolver = "2"
members = ["tsp-http-client", "tsp-http-client-cmd"]

[workspace.metadata.release]
consolidate-commits = false
tag-message = "Release {{crate_name}} version {{version}}"
tag-prefix = ""
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly = 1 },
]
